# netflix_critic_data

./: .gitignore  Dockerfile  dbt_project.yml  docker-compose.yml  entrypoint.sh  package-lock.json  pyproject.toml
analyses/: queries.sql
data/raw/title/: 70031975.html  70039180.html  70039405.html  70041557.html  70042691.html  70043295.html  70043438.html  70043989.html  70044882.html  70050981.html  70052286.html  70057519.html  70057994.html  70059201.html  70065114.html  70069048.html  70069233.html  70069273.html  70071832.html  70075200.html  70077825.html  70081003.html  70083535.html  70084136.html  70090035.html  70093699.html  70095265.html  70103202.html  70103761.html  70105373.html  70105699.html  70108567.html  70109680.html  70111323.html  70113636.html  70113669.html  70116678.html  70117268.html  70117354.html  70118402.html  (+643 more)
scripts/database_setup/: backfill_titles.py  common.py  db_postprocessing.sql  db_setup.sql  populate_availability.py  populate_ratings.py  refine_availability.py
scripts/database_setup/utils/: evaluate.js  playwright-pagefn.js  playwright-postnav.js  playwright-prenav.js  rate_limiter_cls.py
scripts/trash/: bun_vs_node.py  evaluate-bun.js  web-scraper-pagefn.js
seeds/: README.md  movies.csv  series.csv
tests/: qa.sql
