[project]
name = "netflix-critic-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp[speedups]>=3.11.2",
    "aiolimiter>=1.2.0",
    "apify-client>=1.8.1",
    "beautifulsoup4>=4.12.3",
    "psycopg[binary]>=3.2.3",
    "tenacity>=9.0.0",
]
